--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -9,7 +9,7 @@
 
 .navbarLogo{
     width:1.25rem;
-    margin:0 0.5rem;
+    margin-right: 0.6rem;
 }
 
 /* .navbarLog{
@@ -19,12 +19,16 @@
 
 .star-us {
   color : #fb6340 !important;
-  margin-right: 2px;
+  margin-right: 6px;
 }
 
 .glow-on-hover {
   width: 220px;
   height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
   border: none;
   outline: none;
   color: #fff;
