Add hover effects to all page buttons (change bg color) - closes issue #6

--- a/src/components/JoinCommunity.css
+++ b/src/components/JoinCommunity.css
@@ -42,6 +42,10 @@ body{
     font-size: 1.3rem;
 }
 
+.JoinCommunityButton:hover {
+  background-color: #363D44;
+}
+
 .join {
     /* transform: scaleX(-1); */
     height: 35rem;
