feat: revamp website
Signed-off-by: swappy <59965507+rycerzes@users.noreply.github.com>

--- a/app/globals.css
+++ b/app/globals.css
@@ -212,3 +212,12 @@ html {
     display: flex;
   }
 }
+
+/* Add these styles to hide scrollbars */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
