Updated the index.html , add the new testimonial card , and uploaded the required image and it's css

--- a/css/main.css
+++ b/css/main.css
@@ -2935,6 +2935,11 @@ html.no-csstransitions .home-content__main {
   grid-column: 2/4;
   grid-row: 2/3;
 }
+.div6 {
+  background: #644a3c;
+  grid-column: 2/4;
+  grid-row: 2/3;
+}
 .userdetails {
   display: flex;
 }
